[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/CodeEditor/IDE.gd" type="Script" id=1]
[ext_resource path="res://Player/CodeEditor/FileTree.gd" type="Script" id=2]
[ext_resource path="res://Player/CodeEditor/TextEditor.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/NunitoBody.tres" type="DynamicFont" id=4]
[ext_resource path="res://Player/OutputText.tscn" type="PackedScene" id=5]

[node name="IDE" type="Panel" groups=[
"CodePanel",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="LeftBar" type="VBoxContainer" parent="."]
margin_right = 190.0
margin_bottom = 40.0

[node name="EntityName" type="Control" parent="LeftBar"]
margin_left = 2.0
margin_right = 190.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )

[node name="NameLabel" type="Label" parent="LeftBar/EntityName"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 82.0
margin_bottom = 7.0
text = "Entity Name:"

[node name="TargetName" type="LineEdit" parent="LeftBar/EntityName"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 170.0
margin_top = -12.0
margin_right = 100.0
margin_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 100, 0 )
text = "None"
max_length = 20
expand_to_text_length = true

[node name="EntityType" type="Control" parent="LeftBar"]
margin_left = 2.0
margin_top = 29.0
margin_right = 190.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 25 )

[node name="TypeLabel" type="Label" parent="LeftBar/EntityType"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 77.0
margin_bottom = 7.0
text = "Entity Type:"

[node name="Type" type="Label" parent="LeftBar/EntityType"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 90.0
margin_top = -6.11897
margin_right = 180.0
margin_bottom = 7.88103
rect_min_size = Vector2( 100, 0 )
text = "None"

[node name="EntityClass" type="Control" parent="LeftBar"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 58.0
margin_bottom = 83.0
rect_min_size = Vector2( 0, 25 )

[node name="ClassLabel" type="Label" parent="LeftBar/EntityClass"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 77.0
margin_bottom = 7.0
text = "Entity Class:"

[node name="Class" type="Label" parent="LeftBar/EntityClass"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 90.0
margin_top = -7.0
margin_right = 180.0
margin_bottom = 7.0
rect_min_size = Vector2( 90, 0 )
text = "Robot Default"
valign = 1
clip_text = true

[node name="FileTree" type="Tree" parent="LeftBar"]
margin_top = 87.0
margin_right = 190.0
margin_bottom = 587.0
rect_min_size = Vector2( 0, 500 )
script = ExtResource( 2 )

[node name="ResetButton" type="Button" parent="LeftBar"]
margin_top = 591.0
margin_right = 190.0
margin_bottom = 611.0
text = "Reset"

[node name="RecompileButton" type="Button" parent="LeftBar"]
margin_top = 615.0
margin_right = 190.0
margin_bottom = 635.0
text = "Recompile"

[node name="SaveButton" type="Button" parent="LeftBar"]
margin_top = 639.0
margin_right = 190.0
margin_bottom = 659.0
text = "Save"

[node name="CloseButton" type="Button" parent="LeftBar"]
margin_top = 663.0
margin_right = 190.0
margin_bottom = 683.0
text = "Close"

[node name="TextEditor" type="TextEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 0.8
margin_left = 191.948
margin_top = 1.612
margin_right = 1.94763
margin_bottom = 1.612
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
breakpoint_gutter = true
highlight_all_occurrences = true
smooth_scrolling = true
hiding_enabled = 1
script = ExtResource( 3 )

[node name="OutputArea" type="Control" parent="."]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 190.0

[node name="OutputLabel" type="Label" parent="OutputArea"]
margin_left = -0.40918
margin_right = 48.5908
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "Output"

[node name="OutputText" parent="OutputArea" instance=ExtResource( 5 )]
[connection signal="file_dirtied" from="." to="LeftBar/FileTree" method="_on_IDE_file_dirtied"]
[connection signal="text_changed" from="LeftBar/EntityName/TargetName" to="." method="_on_TargetName_text_changed"]
[connection signal="item_selected" from="LeftBar/FileTree" to="." method="_on_FileTree_item_selected"]
[connection signal="pressed" from="LeftBar/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="LeftBar/RecompileButton" to="." method="_on_RecompileButton_pressed"]
[connection signal="pressed" from="LeftBar/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="LeftBar/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="cursor_changed" from="TextEditor" to="." method="_on_TextEditor_cursor_changed"]
[connection signal="text_changed" from="TextEditor" to="." method="_on_TextEditor_text_changed"]
